src/media/sass/styles.sass
// MIXINS
@mixin hover()
	transition: all .3s ease-in-out
	transition-property: color, background-color, border-color, box-shadow

@mixin shadow-input($inset, $outset)
	-webkit-box-shadow: inset 0 1px 1px $inset, 0 0 8px $outset
	-moz-box-shadow: inset 0 1px 1px $inset, 0 0 8px $outset
	box-shadow: inset 0 1px 1px $inset, 0 0 8px $outset


// VARS
$stat: rgb(183,54,26)
$statText: rgb(35,37,50)
$derived: rgb(85,28,21)
$heading: rgb(65,60,66)
$body: rgb(255,250,244)
$font: rgb(110,105,101)
$link: rgb(68,103,127)
$tabBgColour: rgb(179,176,172)

html
	margin: 0
	padding: 0

body
	background-color: $body
	color: $font
	font-family: 'Source Sans Pro', sans-serif
	padding: 0
	margin: 0

h1
	margin-top: 0
	font-family: 'Titillium Web', sans-serif
	position: fixed
	display: inline-block
	top: 0
	color: white
	background-color: $derived
	padding: 1rem 3rem 1rem 1rem
	border-radius: 0 3rem 3rem 0

	svg
		position: relative
		top: 0.15em

h2.subtitle
	font-size: 1.25rem
	text-align: right
	margin: 1.6em 3em 2.5em 0
	line-height: 1em

	&.minion
		color: $link

	&.rival
		color: $derived

	&.nemesis
		color: $stat

h1, h2, h3
	text-transform: uppercase
	letter-spacing: 0.05em

h2, h3
	margin-bottom: 0.5rem
	font-family: 'Titillium Web', sans-serif

h2 + p, h3 + p
	margin-top: 0

p
	line-height: 1.5em
	max-width: 53em

ul
	list-style: none
	margin: 1em 0
	padding: 0

	&.inline-list
		margin: 0

		li
			display: inline

			&:after
				content: ", "

			&:last-of-type:after
				content: ""

svg
	display: inline-block
	width: 1em
	height: 1em
	stroke-width: 0
	stroke: currentColor
	fill: currentColor

.directory
	margin-bottom: 1em

	strong
		display: inline-block
		width: 5em
		text-align: right
		margin-right: 0.5em

strong
	color: $heading

table
	width: 100%
	border-collapse: collapse

tbody tr
	border-bottom: 1px solid lighten($heading, 30%)

	&:last-of-type
		border: 0

	&:nth-child(odd)
		background-color: white

th
	color: $heading
	text-align: left

th, td
	vertical-align: top

	&:first-of-type
		padding-left: 1em

td
	padding: 0.3em

.text-right
	text-align: right

.pull-right
	float: right

.hidden
	display: none

a, .link
	color: $link
	text-decoration: underline
	cursor: pointer
	@include hover()

	&:hover
		text-decoration: none
		color: darken($link, 20%)

.btn
	display: inline-block
	padding: 0.2em 1em
	border-radius: 0.2em
	cursor: pointer
	@include hover()

	&:hover
		background-color: rgba(0, 0, 0, 0.1)

#built-by
	position: fixed
	bottom: 0
	left: 0
	font-size: 0.8em
	padding: 0.2em 1em 0.2em
	background-color: $body
	z-index: 150

.column
	float: left
	overflow: hidden
	margin-left: 1.5em

	&.small
		width: 20em

.filter
	margin-top: 1em
	margin-right: 1em
	position: relative

	input[type="text"]
		width: 100%
		color: $heading
		font-size: 1.1em
		padding: 0.2em 0.5em
		background-color: white
		border: 1px solid darken($link, 20%)
		border-radius: 0.2em
		@include hover()

		&:focus
			outline: 2px solid rgba($link, 0.5)
			border-color: $link
			@include shadow-input($font, $link)

	#clear
		position: absolute
		top: 0.1em
		right: 0.1em
		bottom: 0.1em
		background-color: white
		padding: 0.35em 0.3em 0 0.5em

#container > .loading
	margin-top: 6em

	p
		margin-left: 1em

#navigation
	margin: 0
	padding-left: 1.5em
	height: 100%
	position: fixed
	background-color: $body
	border-right: 2px solid $derived
	z-index: 100

	ul#menu
		margin-top: 0.1em
		margin-bottom: 0.5em
		position: relative
		left: -0.5em
		z-index: 200

		&>li
			display: inline-block
			padding: 0.5em
			cursor: pointer
			border-radius: 0.2em
			@include hover()

			&:hover, &.active
				background-color: $tabBgColour
				color: darken($font, 20%)

			svg
				position: relative
				top: 0.2em

		&>li.active ul
			display: block
			opacity: 1

		ul
			background-color: $tabBgColour
			position: absolute
			margin: 0
			padding: 0.5em
			border-radius: 0.2em
			left: 0
			right: 0
			display: none
			opacity: 0
			transition: all .3s ease-in-out
			transition-property: opacity

			li
				padding: 0.3em
				margin: 0.2em
				border-radius: 0.2em
				display: inline-block
				background-color: rgba(255,255,255,0.5)
				@include hover()

				&:hover
					background-color: transparent

				.link
					text-decoration: none


	ul#adversaries
		position: absolute
		top: 10.5em
		right: 0
		bottom: 0
		left: 1.5em
		margin: 0
		overflow-y: auto
		padding-bottom: 2em

		li
			padding: 0.2em 0
			@include hover()

			&:hover, &.selected
				background-color: white

			&.selected
				font-weight: bold
				padding: 0.3em

				svg
					position: relative
					top: 0.1em

				.link
					text-decoration: none

#tabs
	margin: 0
	padding: 0 0 0.5em 23rem
	background-color: $tabBgColour
	position: fixed
	bottom: 0
	right: 0
	left: 0
	border-top: 2px solid $derived
	list-style-type: none
	z-index: 50

	li
		padding: 0.5em
		display: inline-block
		cursor: pointer

		&.active
			font-weight: bold
			color: $derived
			background-color: $body
			position: relative
			top: -2px
			border-width: 0 2px 2px 2px
			border-style: solid
			border-color: $derived
			border-radius: 0 0 0.2em 0.2em

		&.tools
			padding: 0 0 0 0.5em

			svg
				font-size: 0.7em

		.btn:hover
			color: $link

#content
	margin-left: 21.5em
	width: 58em

	.loading
		margin: 2em

	.large
		width: 37.5em
		padding-bottom: 5em

	.small
		width: 14.25em

.stats
	margin: 0
	font-size: 0.9em

	div
		text-align: center
		margin-bottom: 1.5em

	span
		font-size: 2.5em
		font-weight: bold
		color: $heading
		display: inline-block
		box-sizing: border-box
		padding-top: 0.25em

	h3
		line-height: 1em
		font-size: 1.1em
		padding: 0.5em 0.3em 0.3em 0.3em
		margin: 0
		font-weight: normal
		font-family: 'Source Sans Pro', sans-serif

#characteristics
	div
		box-sizing: border-box
		display: inline-block
		margin-right: 1em
		background-color: $stat
		color: white
		width: 7.4em
		border-radius: 0.5em
		border: 2px solid $heading
		overflow: hidden

		&:nth-child(even)
			margin-right: 0

	span
		background-color: white
		border-radius: 100%
		margin: 0.3em 0
		width: 1.7em
		height: 1.7em
		border: 3px solid $heading

	h3
		background-color: $statText

#derived
	margin: 0.5em 0 1em 0

	div
		background-color: white
		border: 2px solid $derived
		border-radius: 0.5em
		width: 10em
		margin-right: auto
		margin-left: auto

	span
		height: 1.5em

	h3
		background-color: $derived
		color: $body
		margin: 0

		small
			display: block
			font-size: 0.7em

	input[type="text"]
		display: inline-block
		border-width: 0
		border-bottom: 2px solid $derived
		font-size: 2em
		width: 1.5em
		margin: 0.2em 0.2em 0.3em 0.3em
		padding: 0.2em
		text-align: center
		font-weight: bold
		color: $heading

		&:hover
			background-color: #eee

.info
	margin-bottom: 1.5em

	h2
		margin-top: 0
		color: $derived

.text p
		margin-left: 2rem
		margin-right: 1rem

.skills td
	vertical-align: middle

.damage
	display: inline-block
	width: 4.2em

.quality
	padding: 1em
	margin: 1em 0
	background-color: white
	border-top: 1px solid $derived
	border-bottom: 1px solid $derived

	h3
		color: $derived
		font-size: 1.1em
		margin: 0 0 0.2em

#show-all
	float: right
	margin-top: -2.5em
	margin-bottom: 1em

	svg
		position: relative
		top: 0.1em

// dice icons
.icon
	font-family: StarWarsSymbols
	color: $heading
	position: relative
	line-height: 1em !important
	display: inline-block
	
.shadowed:after
	position: absolute
	top: 0
	left: 0
	color: darken($heading, 10%)


.ability
	color: rgb(97,138,74) // green

	&:after
		content: "D"

.proficiency
	color: rgb(255,247,98) // yellow

	&:after
		content: "C"

.setback:after
	content: "B"
	

.boost
	color: rgb(175,196,216) // blue

	&:after
		content: "B"

.challenge
	color: rgb(215,53,53) // red

	&:after
		content: "C"

.difficulty
	color: rgb(68,48,83) // purple

.force
	color: white

	&:after
		content: "C"

.lightside
	color: white

	&:after
		content: "Z"

@font-face
	font-family: StarWarsSymbols
	src: url(../fonts/starwars-dice-symbols.otf), url(../fonts/starwars-dice-symbols.woff) format("woff")

.spinner
	animation-name: spin
	animation-duration: 2s
	animation-iteration-count: infinite
	animation-timing-function: linear

@keyframes spin
	from
		transform: rotate(0deg)
	to
		transform: rotate(360deg)

